--- a/src/components/Encounters/Encounters.module.scss
+++ b/src/components/Encounters/Encounters.module.scss
@@ -7,7 +7,7 @@
   border: 1px solid black;
 
   .coloredRow {
-    background-color: #ffe8e8;
+    background-color: var(--secondary);
   }
 
   .row {
@@ -17,9 +17,14 @@
     grid-template-rows: 100%;
     column-gap: 10px;
     padding: 10px;
+    color: var(--contrast);
     &.tableHeader {
-      background-color: #d46a6a;
+      background-color: var(--primary);
       color: #ffffff;
+    }
+
+    .delete {
+      color: var(--contrast);
     }
   }
 
